--- a/src/scss/sheets/blocks/_stats.scss
+++ b/src/scss/sheets/blocks/_stats.scss
@@ -110,15 +110,16 @@
   z-index: 1;
 
   .flexrow {
-    overflow: hidden;
+    overflow: visible;
+    white-space: nowrap;
   }
 
   span {
     display: inline-block;
-    overflow: hidden;
 
     &:first-child {
       max-width: 72px;
+      overflow: hidden;
     }
   }
 }
